cluster/base/wireguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-service
  labels:
    app: wireguard
spec:
  ports:
  - name: wireguard
    targetPort: 51820
    port: 51820
    protocol: UDP
  - name: web
    targetPort: 80
    port: 80
  selector:
    app: wireguard
