cluster/base/wireguard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wireguard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wireguard.devantler.com`)
      services:
        - name: wireguard
          port: 51821
  tls:
    secretName: certificate-production-tls
